# AI

./: Readme.md  pyproject.toml  vgchartz-2024.csv
0-AI-ML-Basics/4-Gen-AI/: Readme.md
0-AI-ML-Basics/5-AGI/: Readme.md
1-Math-for-AI/: README.md
1-Math-for-AI/1-Linear-algebra/: README.md
2-AI-python/Sales-project/: app.py  sales_data.csv
3-Data-Science/Data Classification/: Readme.md
4-Data Science Project/: vgchartz-2024.csv
4-Data Science Project/Project/: Readme.md  music_data_set.csv  music_recommender.dot  music_recommender_app.ipynb
AI-python/: project-ideas.md
Projects/music-recommender/: pandas_load_dataset.ipynb
Projects/music-recommender/Project/: Readme.md  music_recommender.joblib  music_recommender_app.ipynb
