[tool.poetry]
name = "ai"
version = "0.1.0"
description = "AI with python"
authors = ["Sarmad Rafique <sarmadrafique040@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
faker = "^30.3.0"
black = "^24.10.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
